dl.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt.org
    nginx.ingress.kubernetes.io/permanent-redirect: https://storage.saltbo.cn$request_uri
  name: dl
  namespace: default
spec:
  defaultBackend:
    service:
      name: hello
      port:
        number: 8000
  ingressClassName: nginx
  rules:
  - host: 'dl.saltbo.cn'
  tls:
  - hosts:
    - dl.saltbo.cn
    secretName: cert-dl.saltbo.cn
