ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/issuer: "letsencrypt.org"

spec:
  tls:
    - hosts:
        - caddy.saltbo.cn
      secretName: cert-caddy
  rules:
    - host: caddy.saltbo.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
